--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,11 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.0'
-    implementation 'com.android.support:support-v4:28.0.0-alpha1'
-    implementation 'com.android.support:cardview-v7:28.0.0-alpha1'
-    implementation 'com.android.support:design:28.0.0-alpha1'
+    implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+    implementation 'com.android.support:support-v4:28.0.0-alpha3'
+    implementation 'com.android.support:cardview-v7:28.0.0-alpha3'
+    implementation 'com.android.support:design:28.0.0-alpha3'
+    implementation 'com.android.support:palette-v7:27.1.1'
 
 }
